Fix layout issue on about page

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -450,13 +450,14 @@
   .team-thumb {
     display: flex;
     justify-content: start;
-    align-items: center;
+    align-items: start;
     flex-direction: row;
     margin-top: 20px;
+    height: fit-content;
   }
 
   .team-image {
-    width: 100px;
+    width: 120px;
     height: auto;
   }
 
@@ -469,13 +470,13 @@
   }
 
   .team-info {
-    padding: 20px 30px 0 30px;
+    padding: 30px;
+    padding-top: 0px;
   }
 
   .team-contact-info {
+    padding-top: 10px;
     border-top: 1px solid #e9e9e9;
-    padding-top: 1.2em;
-    margin-top: 1.5em;
   }
 
   .team-contact-info .fa {
